fix: comparison slider on firefox

--- a/src/components/comparison-slider/_comparison-slider.scss
+++ b/src/components/comparison-slider/_comparison-slider.scss
@@ -32,6 +32,7 @@
     width: 100%;
     z-index: 5;
     overflow: hidden;
+    height: 100%;
   }
 
   input {
@@ -46,6 +47,14 @@
     -webkit-appearance: none;
     height: 700px;
     width: 3px;
+    background: none;
+    cursor: col-resize;
+  }
+
+  input::-moz-range-thumb {
+    height: 700px;
+    width: 3px;
+    border: none;
     background: none;
     cursor: col-resize;
   }
